--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@tonejs/piano": "^0.2.1",
+    "@tweenjs/tween.js": "^18.6.4",
     "events": "^3.3.0",
     "three": "^0.141.0",
     "tone": "^14.7.77",
