--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "dev": "vite --host",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -m \"chore: deploy to gh-pages\" -d dist"
   },
   "devDependencies": {
     "@tweakpane/core": "^1.0.9",
     "@tweakpane/plugin-essentials": "^0.1.4",
     "@types/node": "^17.0.39",
     "@types/three": "^0.140.0",
+    "gh-pages": "^4.0.0",
     "tweakpane": "^3.0.8",
     "typescript": "^4.5.4",
     "vite": "^2.9.9"
@@ -20,6 +22,7 @@
     "@tonejs/piano": "^0.2.1",
     "@tweenjs/tween.js": "^18.6.4",
     "events": "^3.3.0",
+    "postprocessing": "^6.28.0",
     "three": "^0.141.0",
     "tone": "^14.7.77",
     "webmidi": "^2.5.1"
