--- a/package.json
+++ b/package.json
@@ -1,51 +1,52 @@
 {
-	"name": "pianode",
-	"private": true,
-	"version": "0.0.0",
-	"scripts": {
-		"dev": "vite --host",
-		"build": "tsc && vite build",
-		"preview": "vite preview",
-		"format": "prettier --write src/**/*.ts{,x}",
-		"lint": "tsc --noEmit && eslint src/**/*.ts{,x}"
-	},
-	"dependencies": {
-		"@react-spring/three": "^9.4.5",
-		"@react-three/drei": "^9.13.2",
-		"@react-three/fiber": "^8.0.27",
-		"@tonejs/piano": "^0.2.1",
-		"@types/three": "^0.141.0",
-		"events": "^3.3.0",
-		"react": "^18.0.0",
-		"react-dom": "^18.0.0",
-		"three": "^0.141.0",
-		"tone": "^14.7.77",
-		"webmidi": "^2.5.1"
-	},
-	"devDependencies": {
-		"@types/react": "^18.0.0",
-		"@types/react-dom": "^18.0.0",
-		"@typescript-eslint/eslint-plugin": "^5.29.0",
-		"@typescript-eslint/parser": "^5.29.0",
-		"@vitejs/plugin-react": "^1.3.0",
-		"cz-conventional-changelog": "^3.3.0",
-		"eslint": "^8.2.0",
-		"eslint-config-airbnb": "^19.0.4",
-		"eslint-config-airbnb-typescript": "^17.0.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-import": "^2.25.3",
-		"eslint-plugin-jsx-a11y": "^6.5.1",
-		"eslint-plugin-prettier": "^4.0.0",
-		"eslint-plugin-react": "^7.28.0",
-		"eslint-plugin-react-hooks": "^4.3.0",
-		"gh-pages": "^4.0.0",
-		"tweakpane": "^3.1.0",
-		"typescript": "^4.6.3",
-		"vite": "^2.9.9"
-	},
-	"config": {
-		"commitizen": {
-			"path": "./node_modules/cz-conventional-changelog"
-		}
-	}
+  "name": "pianode",
+  "private": true,
+  "version": "0.0.0",
+  "scripts": {
+    "dev": "vite --host",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "deploy": "gh-pages -m \"chore: deploy to gh-pages\" -d dist",
+    "format": "prettier --write src/**/*.ts{,x}",
+    "lint": "tsc --noEmit && eslint src/**/*.ts{,x}"
+  },
+  "dependencies": {
+    "@react-spring/three": "^9.4.5",
+    "@react-three/drei": "^9.13.2",
+    "@react-three/fiber": "^8.0.27",
+    "@tonejs/piano": "^0.2.1",
+    "@types/three": "^0.141.0",
+    "events": "^3.3.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "three": "^0.141.0",
+    "tone": "^14.7.77",
+    "webmidi": "^2.5.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "gh-pages": "^4.0.0",
+    "tweakpane": "^3.1.0",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.9"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
