--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.0.0",
     "socket.io-client": "^4.5.1",
     "three": "^0.141.0",
+    "three-stdlib": "^2.12.1",
     "tone": "^14.7.77",
     "webmidi": "^2.5.1",
     "zustand": "^4.0.0-rc.1"
@@ -37,6 +38,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^4.0.0",
+    "r3f-perf": "^6.4.1",
     "tweakpane": "^3.1.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
