--- a/packages/client/.eslintrc
+++ b/packages/client/.eslintrc
@@ -21,8 +21,10 @@
   "rules": {
     "linebreak-style": "off",
     "react-hooks/exhaustive-deps": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+
     "prettier/prettier": [
-      "error",
+      "warn",
       {
         "endOfLine": "auto"
       }
