--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,8 +8,11 @@
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
+    "base64id": "^2.0.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.3",
     "helmet": "^3.23.3",
     "http-errors": "^1.8.0",
     "morgan": "^1.10.0",
