--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,10 +15,12 @@
     "@react-three/fiber": "^8.0.27",
     "@tonejs/piano": "^0.2.1",
     "@types/three": "^0.141.0",
+    "axios": "^0.27.2",
     "events": "^3.3.0",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "socket.io-client": "^4.5.1",
     "three": "^0.141.0",
     "three-stdlib": "^2.12.1",
