--- a/packages/server/.eslintrc
+++ b/packages/server/.eslintrc
@@ -2,8 +2,10 @@
   "extends": ["airbnb-base", "prettier"],
   "plugins": ["prettier"],
   "env": {
-    "node": true,
-    "es6": true,
-    "jest": true
+    "browser": true,
+    "es6": true
+  },
+  "rules": {
+    "import/prefer-default-export": "off"
   }
 }
