--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,13 +1,15 @@
 {
   "name": "server",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "NODE_ENV=production node ./src/index.js",
-    "dev": "NODE_ENV=development nodemon ./src/index.js",
+    "start": "NODE_ENV=production node --es-module-specifier-resolution=node ./src/index.js",
+    "dev": "NODE_ENV=development nodemon --es-module-specifier-resolution=node ./src/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
+    "shared": "^0.0.0",
     "base64id": "^2.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
