--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,8 +1,19 @@
 {
   "name": "shared",
   "version": "0.0.0",
-  "type": "module",
+  "main": "dist/index.js",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "type": "module",
+  "scripts": {
+    "build": "tsc"
+  },
+  "devDependencies": {
+    "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "typescript": "^4.7.4"
+  }
 }
