feat: add basic UI and join screen, improve notifications
Added ChakraUI + TailwindCSS for the UI. In a future, ChakraUI will be replaced with pure
TailwindCSS. Also added new notifications, such as "X has joined/left the room", and the code has
been slightly restructured (`App.tsx` now contains the routes, previously in `main.tsx`)

--- a/packages/client/.eslintrc
+++ b/packages/client/.eslintrc
@@ -16,7 +16,7 @@
     },
     "ecmaVersion": 2018,
     "sourceType": "module",
-    "project": "./tsconfig.json"
+    "project": ["./packages/client/tsconfig.json"]
   },
   "rules": {
     "linebreak-style": "off",
