--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,12 +10,17 @@
     "lint": "tsc --noEmit && eslint src/**/*.ts{,x}"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.2",
+    "@chakra-ui/react": "^2.2.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@react-spring/three": "^9.4.5",
     "@react-three/drei": "^9.13.2",
     "@react-three/fiber": "^8.0.27",
     "@tonejs/piano": "^0.2.1",
     "@types/three": "^0.141.0",
     "events": "^3.3.0",
+    "framer-motion": "^6.3.16",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hot-toast": "^2.2.0",
@@ -31,16 +36,20 @@
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-transition-group": "^4.4.5",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.7",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gh-pages": "^4.0.0",
+    "postcss": "^8.4.14",
     "r3f-perf": "^6.4.1",
+    "tailwindcss": "^3.1.4",
     "tweakpane": "^3.1.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
