--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,6 +19,7 @@
     "events": "^3.3.0",
     "framer-motion": "^6.3.16",
     "react": "^18.0.0",
+    "react-colorful": "^5.5.1",
     "react-dom": "^18.0.0",
     "react-hot-toast": "^2.2.0",
     "react-router-dom": "^6.3.0",
@@ -31,7 +32,7 @@
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
+    "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.0",
     "@types/react-transition-group": "^4.4.5",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
