--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -52,5 +52,8 @@
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
   },
+  "optionalDependencies": {
+    "@esbuild/linux-x64":"0.25.0"
+  },
   "proxy": "http://localhost:3001"
 }
