--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -50,8 +50,10 @@
     "tailwindcss": "^3.1.4",
     "tweakpane": "^3.1.0",
     "typescript": "^4.6.3",
-    "vite": "^2.9.9",
-    "esbuild":"^0.25.0"
+    "vite": "^2.9.9"
+  },
+  "optionalDependencies": {
+    "@esbuild/linux-x64":"^0.25.0"
   },
   "proxy": "http://localhost:3001"
 }
